2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Mention the ICDAR 2011 paper in SCRIBO's README.

	* README (Bibliography): Here.
	Fix copyright header.
	* src/README: Fix copyright header.

2011-11-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix test of Niblack's algorithm.

	* tests/binarization/niblack.ref.pbm: Update.

2011-11-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Update use of the threshold function.

	* scribo/binarization/global_threshold.hh: Here.

	* scribo/binarization/sauvola_ms_split.hh,
	* scribo/text/clean.hh,
	* scribo/text/clean_inplace.hh: Remove useless include.

2011-11-21  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: update requirements information.

2011-11-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Fix code for Tesseract 3.01
	compatibility.

2011-10-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Move Otsu's threshold computation in a separate routine.

	* scribo/binarization/otsu.hh,
	* scribo/binarization/otsu_threshold.hh: Move threshold
	computation in a separate routine.

2011-10-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Niblack's binarization algorithm.

	* scribo/binarization/all.hh: Update includes.

	* scribo/binarization/internal/compute_local_threshold.hh,
	* scribo/binarization/internal/compute_sauvola_threshold.hh,
	* scribo/binarization/internal/first_pass_functor.hh,
	* scribo/binarization/internal/local_threshold_debug.hh,
	* scribo/binarization/internal/sauvola_debug.hh,
	* scribo/binarization/internal/sauvola_formula.hh,
	* scribo/binarization/sauvola.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/binarization/sauvola_threshold.hh,
	* scribo/binarization/sauvola_threshold_image.hh: Revamp code in
	order to share some parts with Niblack's algorithm.

	* scribo/binarization/internal/niblack_formula.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/niblack_threshold.hh: New.

	* src/binarization/Makefile.am
	* tests/binarization/Makefile.am: Add new targets.
