@@ -5,14 +5,20 @@ scribo/all.hh \
 scribo/binarization/all.hh \
 scribo/binarization/global_threshold.hh \
 scribo/binarization/global_threshold_auto.hh \
-scribo/binarization/internal/compute_sauvola_threshold.hh \
+scribo/binarization/internal/compute_local_threshold.hh \
 scribo/binarization/internal/first_pass_functor.hh \
-scribo/binarization/internal/sauvola_debug.hh \
+scribo/binarization/internal/local_threshold_debug.hh \
+scribo/binarization/internal/niblack_formula.hh \
+scribo/binarization/internal/sauvola_formula.hh \
 scribo/binarization/local_threshold.hh \
+scribo/binarization/niblack.hh \
+scribo/binarization/niblack_threshold.hh \
+scribo/binarization/otsu.hh \
+scribo/binarization/otsu_threshold.hh \
 scribo/binarization/sauvola.hh \
 scribo/binarization/sauvola_ms.hh \
 scribo/binarization/sauvola_ms_split.hh \
-scribo/binarization/sauvola_threshold_image.hh \
+scribo/binarization/sauvola_threshold.hh \
 scribo/canvas/integral_browsing.hh \
 scribo/convert/from_base64.hh \
 scribo/convert/from_qimage.hh \
