@@ -226,14 +226,20 @@ scribo_all \
 scribo_binarization_all \
 scribo_binarization_global_threshold \
 scribo_binarization_global_threshold_auto \
-scribo_binarization_internal_compute_sauvola_threshold \
+scribo_binarization_internal_compute_local_threshold \
 scribo_binarization_internal_first_pass_functor \
-scribo_binarization_internal_sauvola_debug \
+scribo_binarization_internal_local_threshold_debug \
+scribo_binarization_internal_niblack_formula \
+scribo_binarization_internal_sauvola_formula \
 scribo_binarization_local_threshold \
+scribo_binarization_niblack \
+scribo_binarization_niblack_threshold \
+scribo_binarization_otsu \
+scribo_binarization_otsu_threshold \
 scribo_binarization_sauvola \
 scribo_binarization_sauvola_ms \
 scribo_binarization_sauvola_ms_split \
-scribo_binarization_sauvola_threshold_image \
+scribo_binarization_sauvola_threshold \
 scribo_canvas_integral_browsing \
 scribo_convert_to_base64 \
 scribo_core_all \
@@ -475,14 +481,20 @@ scribo_all_SOURCES = scribo_all.cc
 scribo_binarization_all_SOURCES = scribo_binarization_all.cc
 scribo_binarization_global_threshold_SOURCES = scribo_binarization_global_threshold.cc
 scribo_binarization_global_threshold_auto_SOURCES = scribo_binarization_global_threshold_auto.cc
-scribo_binarization_internal_compute_sauvola_threshold_SOURCES = scribo_binarization_internal_compute_sauvola_threshold.cc
+scribo_binarization_internal_compute_local_threshold_SOURCES = scribo_binarization_internal_compute_local_threshold.cc
 scribo_binarization_internal_first_pass_functor_SOURCES = scribo_binarization_internal_first_pass_functor.cc
-scribo_binarization_internal_sauvola_debug_SOURCES = scribo_binarization_internal_sauvola_debug.cc
+scribo_binarization_internal_local_threshold_debug_SOURCES = scribo_binarization_internal_local_threshold_debug.cc
+scribo_binarization_internal_niblack_formula_SOURCES = scribo_binarization_internal_niblack_formula.cc
+scribo_binarization_internal_sauvola_formula_SOURCES = scribo_binarization_internal_sauvola_formula.cc
 scribo_binarization_local_threshold_SOURCES = scribo_binarization_local_threshold.cc
+scribo_binarization_niblack_SOURCES = scribo_binarization_niblack.cc
+scribo_binarization_niblack_threshold_SOURCES = scribo_binarization_niblack_threshold.cc
+scribo_binarization_otsu_SOURCES = scribo_binarization_otsu.cc
+scribo_binarization_otsu_threshold_SOURCES = scribo_binarization_otsu_threshold.cc
 scribo_binarization_sauvola_SOURCES = scribo_binarization_sauvola.cc
 scribo_binarization_sauvola_ms_SOURCES = scribo_binarization_sauvola_ms.cc
 scribo_binarization_sauvola_ms_split_SOURCES = scribo_binarization_sauvola_ms_split.cc
-scribo_binarization_sauvola_threshold_image_SOURCES = scribo_binarization_sauvola_threshold_image.cc
+scribo_binarization_sauvola_threshold_SOURCES = scribo_binarization_sauvola_threshold.cc
 scribo_canvas_integral_browsing_SOURCES = scribo_canvas_integral_browsing.cc
 scribo_convert_to_base64_SOURCES = scribo_convert_to_base64.cc
 scribo_core_all_SOURCES = scribo_core_all.cc
