@@ -1,3 +1,10 @@
+2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Regenerate mk files.
+
+	* headers.mk,
+	* tests/unit_test/unit-tests.mk: Regen.
+
 2011-10-06  Roland Levillain  <roland@lrde.epita.fr>
 
 	Mention the ICDAR 2011 paper in SCRIBO's README.
